[project]
name = "weather-reporter-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "YOUR-NAME", email = "your.email@example.com"}
]
readme = "README.md"

[tool.poetry]
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
langgraph = "0.2.60"
env-canada= "0.7.2"
poetry = "^2.0.0"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
debugpy = "^1.8.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"